feat(securite): Phase 1 — durcissement auth & isolation multi-etablissements
Secrets & auth
- JwtService: refus de demarrage si JWT_SECRET absent / < 32 car. / valeur d'exemple
- OTP: SecureRandom, verrou apres 5 tentatives (champ otp_tentatives), expiry 10 min,
  code retire du sujet d'e-mail et des logs
- RateLimitingFilter: 10 req/60s/IP sur /api/auth/{login,verify-otp,resend-otp,forgot-password}
- CORS externalise via CORS_ALLOWED_ORIGINS

Mots de passe initiaux
- PasswordGenerator (12 car., sans caracteres ambigus)
- eleve/enseignant: mot de passe aleatoire renvoye une fois dans la reponse de creation
- DataInitializer (reparation): mot de passe aleatoire trace dans les logs

Isolation multi-etablissements (cf. docs/adr/0002)
- colonne etablissement_id + TenantScoped sur 16 entites
- TenantContext (ThreadLocal) alimente par TenantContextFilter depuis le JWT
- TenantGuard: requireSameTenant / filterSameTenant / crossTenant
- TenantEntityListener @PrePersist: rattachement automatique a l'etablissement courant
- tous les services (scolarite, evaluation, comptabilite, iam): lectures filtrees
  par etablissement, suppression des fallbacks 'return true' / catch->findAll()
- RecuPdfService: verification d'etablissement avant generation du PDF

Migrations
- Flyway: V1 schema initial (genere depuis les entites), V2 donnees de reference,
  V3 index (dont etablissement_id). Desactive par defaut (FLYWAY_ENABLED),
  a activer avec JPA_DDL_AUTO=validate sur base neuve
- suppression de schema.sql obsolete

Tests: JwtServiceTest, PasswordGeneratorTest, TenantGuardTest (70 assertions, hors DB)